MWPW-147023 fix css styles of project up a bit with a focus on making the old unwrapBlock call for the banner, promotion & template-list unnecessary (#24)

--- a/express/blocks/steps/steps.css
+++ b/express/blocks/steps/steps.css
@@ -1,4 +1,4 @@
-main .section .steps {
+.steps {
   margin-top: 56px;
   display: -ms-grid; /* stylelint-disable-line */
   display: grid; /* stylelint-disable-line */
@@ -10,25 +10,29 @@ main .section .steps {
   margin-right: auto;
 }
 
-main .section .steps h2,
-main .section .steps h3 {
+.steps-highlight-container h2, .steps-dark-container h2, .steps-container h2, .steps h2 {
+  text-align: center;
+}
+
+.steps h2,
+.steps h3 {
   margin: 0;
 }
 
-main .section .steps h3 {
+.steps h3 {
   font-size: var(--heading-font-size-s);
   text-align: left;
   line-height: 26px;
   margin-top: 0;
 }
 
-main .section .steps p {
+.steps p {
   font-size: var(--body-font-size-s);
   text-align: left;
   margin: 4px 0;
 }
 
-main .section .steps > div {
+.steps > div {
   display: -webkit-box; /* stylelint-disable-line */
   display: -ms-flexbox; /* stylelint-disable-line */
   display: flex; /* stylelint-disable-line */
@@ -38,84 +42,84 @@ main .section .steps > div {
   color: var(--color-white);
 }
 
-main .section .steps .step-image {
+.steps .step-image {
   margin-right: 20px;
 }
 
-main .section .steps .step-image picture img,
-main .section .steps .step-image img.icon {
+.steps .step-image picture img,
+.steps .step-image img.icon {
   width: 40px;
   max-width: unset;
   height: 40px;
   margin: 4px 0;
 }
 
-main .section .steps .step-description {
+.steps .step-description {
   width: 100%;
 }
 
-main .section:has(> .steps) {
+.section:has(> .steps) {
   margin-top: 80px;
 }
 
-main .section:has(> .steps.dark),
-main .section:has(> .steps.highlight) {
+.section:has(> .steps.dark),
+.section:has(> .steps.highlight) {
   padding: 120px 0;
 }
 
-main .section:has(> .steps.dark) {
+.section:has(> .steps.dark) {
   background-color: var(--color-black);
 }
 
-main .section:has(> .steps.dark) > *,
-main .section:has(> .steps.highlight) > * {
+.section:has(> .steps.dark) > *,
+.section:has(> .steps.highlight) > * {
   color: var(--color-white);
 }
 
-main .section:has(> .steps.dark) div > h2:first-of-type,
-main .section:has(> .steps.highlight) > div > h2:first-of-type {
+.section:has(> .steps.dark) div > h2:first-of-type,
+.section:has(> .steps.highlight) > div > h2:first-of-type {
   margin-top: 0;
 }
 
-main .section:has(> .steps.dark) .steps > div {
+.section:has(> .steps.dark) .steps > div {
   background-color: var(--color-gray-700);
 }
 
-main .section:has(> .steps.highlight) {
+.section:has(> .steps.highlight) {
   background: var(--gradient-highlight-vertical);
 }
 
-main .section:has(> .steps.highlight) .steps > div {
+.section:has(> .steps.highlight) .steps > div {
   background-color: var(--color-white);
   color: var(--color-gray-800);
 }
 
-main .section .steps .icon {
+.steps .icon {
   fill: currentColor;
   width: 24px;
   height: 24px;
 }
 
-main .section:has(.steps) .content {
+.section:has(.steps) .content {
   max-width: 375px;
 }
 
 @media (min-width: 900px) {
-  main .section:has(> .steps.dark),
-  main .section:has(> .steps.highlight) {
+  .section:has(> .steps.dark),
+  .section:has(> .steps.highlight) {
     padding: 80px 0;
   }
-  main .section:has(> .steps) > div,
-  main .section:has(> .steps.dark) > div,
-  main .section:has(> .steps.highlight) > div {
+  .section:has(> .steps) > div,
+  .section:has(> .steps.dark) > div,
+  .section:has(> .steps.highlight) > div {
     max-width: 950px;
   }
-  main .section .steps {
+  .steps {
     -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     max-width: none;
   }
-  main .section .steps > div {
+  .steps > div {
     display: -webkit-box; /* stylelint-disable-line */
     display: -ms-flexbox; /* stylelint-disable-line */
     display: flex; /* stylelint-disable-line */
@@ -123,8 +127,8 @@ main .section:has(.steps) .content {
 }
 
 @media (min-width: 1200px) {
-  main .section:has(> .steps.dark) > div,
-  main .section:has(> .steps) > div {
+  .section:has(> .steps.dark) > div,
+  .section:has(> .steps) > div {
     max-width: 1024px;
   }
 }
